fix styling and  default sizes on smaller screen

--- a/src/style.css
+++ b/src/style.css
@@ -796,3 +796,6 @@ div {
     left: 0;
     border-radius: 1rem;
 }
+.not-found {
+    font-size: 4rem;
+}
